Adjustments for errors.